<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/qr_code_header_bar"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/qr_code_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_scan_qr_code"
            android:layout_centerInParent="true"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:id="@+id/qr_code_header_black_pic"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qr_code_select_picture"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <SurfaceView
        android:layout_gravity="center"
        android:id="@+id/qr_code_preview_view"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/qr_code_header_bar"/>
    <com.blikoon.qrcodescanner.view.QrCodeFinderView
        android:id="@+id/qr_code_view_finder"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/qr_code_header_bar"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/qr_code_ll_flash_light"
        android:background="@color/qr_code_flashlight_bg"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/qr_code_iv_flash_light"
            android:background="@drawable/flashlight_turn_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
        <TextView
            android:textSize="@dimen/text_size_13sp"
            android:textColor="@color/qr_code_flash_light_text_color"
            android:layout_gravity="center"
            android:id="@+id/qr_code_tv_flash_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/qr_code_open_flash_light"/>
    </LinearLayout>
    <View
        android:id="@+id/qr_code_view_background"
        android:background="@android:color/black"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/qr_code_header_bar"/>
</RelativeLayout>
